添加王进的blog

--- a/source/_posts/移动周分享-第48期.md
+++ b/source/_posts/移动周分享-第48期.md
@@ -185,3 +185,6 @@ mail -s "mail title" 123456@163.com < outfile-1458185763.txt
 ```
 
  参考：[LINUX下通过外部SMTP发邮件 （直接抛弃sendmail和postfix）]( http://www.cnblogs.com/xiaoshi1991/archive/2012/09/19/2694465.html)
+
+## 插件推荐 - 王进
+|插件|简介||----|----||[ParcelableGenerator](https://github.com/mcharmas/android-parcelable-intellij-plugin) |Android中的序列化有两种方式, 分别是实现Serializable接口和Parcelable接口, 但在Android中是推荐使用Parcelable, 只不过我们这种方式要比Serializable方式要繁琐，那么有了这个插件一切就ok了||[GsonFormat](https://github.com/zzz40500/GsonFormat)|现在大多数服务端api都以json数据格式返回, 而客户端需要根据api接口生成相应的实体类, 这个插件把这个过程自动化了, 赶紧使用起来吧||[ADB WIFI](https://github.com/layerlre/ADBWIFI)|每天只需用USB线连接一次，就可以将USB连接切换成WIFI连接，去掉讨厌的数据线连接|
