--- a/source/_posts/移动周分享-第50期.md
+++ b/source/_posts/移动周分享-第50期.md
@@ -127,3 +127,70 @@ LAContext *context = [[LAContext alloc] init];
 - LAErrorTouchIDLockout   NS_ENUM_AVAILABLE(10_11, 9_0)
 - LAErrorAppCancel        NS_ENUM_AVAILABLE(10_11, 9_0) 
 - LAErrorInvalidContext   NS_ENUM_AVAILABLE(10_11, 9_0)
+
+
+
+## dispatch_sync的坑 - 潘君
+### 起因
+
+dispatch_sync自己创建的队列 仍旧有可能在main thread上执行block
+
+
+
+### 坑
+
+- GCD只是管理一个线程池 不保证一定在某一个thread或不在某一个thread执行
+
+- 非main程队列也有可能调用主线程
+
+- 为了优化 有可能在当前线程中执行block
+
+
+
+## 问题
+
+如何不让dispatch_sync卡主线程呢
+
+
+
+答: 别在主线程调用此函数 哈哈哈
+
+
+
+### 用途
+
+- 锁的功能
+
+- 确保在主线程执行block
+
+AFNetworking在调用前判断是否是主线程
+
+```
+
+    if (![[NSThread currentThread] isMainThread]) {
+
+        dispatch_sync(dispatch_get_main_queue(), ^{
+
+            [self transitionToNextPhase];
+
+        });
+
+        return YES;
+
+    }
+
+```
+
+
+
+
+
+### 参考
+
+- http://stackoverflow.com/questions/9471420/whats-the-benefit-of-using-dispatch-sync-if-it-has-to-wait-until-the-main-threa
+
+- http://stackoverflow.com/questions/4607125/using-dispatch-sync-in-grand-central-dispatch
+
+- http://honglu.me/2016/01/11/AFNetworking%20%E6%BA%90%E7%A0%81%E9%98%85%E8%AF%BB/
+
+
