--- a/source/_posts/移动周分享-第52期.md
+++ b/source/_posts/移动周分享-第52期.md
@@ -21,6 +21,7 @@ categories: 移动组周技术分享
  - 富文本注释
  
 `如下所有案例使用Xcode7下加载playground文件，可预览效果`
+[文件下载链接](https://github.com/51offer/51offer.github.com/tree/blog/share_files/xcodeyang52.playground)
 
 ### 变量
 > 至上而下执行，显示变量的当前值及历史记录的变化。
@@ -103,7 +104,7 @@ let task2 = NSURLSession.sharedSession().dataTaskWithURL(url2) {
 task2.resume()
 ```
 
-## 结构介绍
+### 结构介绍
 - sources
 > 我们直接在 Playground 上面写代码，然后编译器会实时编译我们代码，并将结果显示出来。但是效率很低，source的作用就可以发挥出来
  
@@ -127,3 +128,187 @@ if let path = NSBundle.mainBundle().pathForResource("swift-playground", ofType: 
 }
 ```
 
+## Android APP开发设计模式 - 王胜
+
+### MVC(Standard Android)
+
+- 目录结构
+
+  ![android-mvc](http://7xsk2b.com2.z0.glb.clouddn.com/image/android-mvc.png)
+  
+  - Weather
+    
+    ``` Java
+    public class Weather {
+        private String date;//日期
+        private String textDay;//白天天气
+        private String textNight;//夜晚天气
+        private String high;//最高气温
+        private String low;//最低气温
+
+        public String getDisplay() {
+            StringBuilder sb = new StringBuilder();
+            sb.append(date);
+            sb.append("\t");
+            sb.append("白天:");
+            sb.append(textDay);
+            sb.append(", ");
+            sb.append("夜晚:");
+            sb.append(textNight);
+            sb.append(", ");
+            sb.append("最高气温:");
+            sb.append(high);
+            sb.append(", ");
+            sb.append("最低气温:");
+            sb.append(low);
+            return sb.toString();
+        }
+        
+        // setter and getter
+        ......
+    }
+    ```
+    
+  - WeatherActivity
+  
+    ``` Java
+    public class WeatherActivity extends AppCompatActivity {
+	    private ListView lv;
+	    private LinearLayout llLoading;
+
+	    @Override
+	    protected void onCreate(@Nullable Bundle savedInstanceState) {
+	        super.onCreate(savedInstanceState);
+	        setContentView(R.layout.activity_weather);
+	        lv = (ListView) findViewById(R.id.lv);
+	        llLoading = (LinearLayout) findViewById(R.id.ll_loading);
+	        loadData();
+	    }
+	
+	    private void loadData() {
+	        HttpEngine.get(Constants.API_WEATHER, new HttpEngine.JSONRequestCallback() {
+	            @Override
+	            public void onFailed(Call call, Exception e) {
+	                if (call.request().url().url().toString().equals(Constants.API_WEATHER)) {
+	                    Log.e(WeatherActivity.class.getSimpleName(), e.getMessage());
+	                    Toast.makeText(WeatherActivity.this, "Get data failed!", Toast.LENGTH_LONG).show();
+	                    llLoading.setVisibility(View.GONE);
+	                }
+	            }
+	
+	            @Override
+	            public void onSuccess(Call call, JSONObject jsonResult) {
+	                if (call.request().url().url().toString().equals(Constants.API_WEATHER)) {
+	                    try {
+	                        JSONArray jsonArray = jsonResult.getJSONArray("results").getJSONObject(0).getJSONArray("daily");
+	                        Gson gson = new GsonBuilder().setFieldNamingPolicy(FieldNamingPolicy.LOWER_CASE_WITH_UNDERSCORES).create();
+	                        final List<Weather> data = gson.fromJson(jsonArray.toString(), new TypeToken<List<Weather>>(){}.getType());
+	                        WeatherAdapter adapter = new WeatherAdapter(WeatherActivity.this, data);
+	                        lv.setAdapter(adapter);
+	                        llLoading.setVisibility(View.GONE);
+	                        lv.setVisibility(View.VISIBLE);
+	                    } catch (JSONException e) {
+	                        Log.e(WeatherActivity.class.getSimpleName(), e.getMessage());
+	                        Toast.makeText(WeatherActivity.this, "Get data failed!", Toast.LENGTH_LONG).show();
+	                    }
+	                }
+	            }
+	        });
+	    }
+	 }
+    ```
+
+### MVP
+
+- 目录结构
+
+  ![android-mvp](http://7xsk2b.com2.z0.glb.clouddn.com/image/android-mvp.png)
+  
+  - Weather 同上
+  - IWeatherView && WeatherActivity
+    
+    ``` Java
+    public interface IWeatherView {
+	     /**
+	      * 刷新天气列表
+	      * @param data
+	      */
+	     void refreshWeatherList(List<Weather> data);
+	
+	     /**
+	      * 显示错误信息
+	      * @param e
+	      */
+	     void showErrorInfo(Exception e);
+	 }
+	 
+	 public class WeatherActivity extends AppCompatActivity implements IWeatherView{
+	     private ListView lv;
+	     private LinearLayout llLoading;
+	     private WeatherPresenter mWeatherPresenter;
+	
+	     @Override
+	     protected void onCreate(@Nullable Bundle savedInstanceState) {
+	         super.onCreate(savedInstanceState);
+	         setContentView(R.layout.activity_weather);
+	         lv = (ListView) findViewById(R.id.lv);
+	         llLoading = (LinearLayout) findViewById(R.id.ll_loading);
+	         mWeatherPresenter = new WeatherPresenter(this);
+	         mWeatherPresenter.getWeatherList();
+	     }
+	
+	     @Override
+	     public void refreshWeatherList(List<Weather> data) {
+	         WeatherAdapter adapter = new WeatherAdapter(WeatherActivity.this, data);
+	         lv.setAdapter(adapter);
+	         llLoading.setVisibility(View.GONE);
+	         lv.setVisibility(View.VISIBLE);
+	     }
+	
+	     @Override
+	     public void showErrorInfo(Exception e) {
+	         Log.e(WeatherActivity.class.getSimpleName(), e.getMessage());
+	         Toast.makeText(WeatherActivity.this, "Get data failed!", Toast.LENGTH_LONG).show();
+	         llLoading.setVisibility(View.GONE);
+	     }
+	 }
+    ```
+  - WeatherPresenter
+
+    ``` Java
+    public class WeatherPresenter {
+	     private IWeatherView mWeatherView;
+	
+	     public WeatherPresenter(@NonNull IWeatherView view) {
+	         this.mWeatherView = view;
+	     }
+	
+	     /**
+	      * 通过网络请求获取天气列表数据
+	      */
+	     public void getWeatherList() {
+	         HttpEngine.get(Constants.API_WEATHER, new HttpEngine.JSONRequestCallback() {
+	             @Override
+	             public void onFailed(Call call, Exception e) {
+	                 if (call.request().url().url().toString().equals(Constants.API_WEATHER)) {
+	                     mWeatherView.showErrorInfo(e);
+	                 }
+	             }
+	
+	             @Override
+	             public void onSuccess(Call call, JSONObject jsonResult) {
+	                 if (call.request().url().url().toString().equals(Constants.API_WEATHER)) {
+	                     try {
+	                         JSONArray jsonArray = jsonResult.getJSONArray("results").getJSONObject(0).getJSONArray("daily");
+	                         Gson gson = new GsonBuilder().setFieldNamingPolicy(FieldNamingPolicy.LOWER_CASE_WITH_UNDERSCORES).create();
+	                         List<Weather> data = gson.fromJson(jsonArray.toString(), new TypeToken<List<Weather>>(){}.getType());
+	                         mWeatherView.refreshWeatherList(data);
+	                     } catch (JSONException e) {
+	                         mWeatherView.showErrorInfo(e);
+	                     }
+	                 }
+	             }
+	         });
+	     }
+	 }
+    ```
