添加王胜的blog

--- a/source/_posts/移动周分享-第60期.md
+++ b/source/_posts/移动周分享-第60期.md
@@ -5,7 +5,51 @@ categories: 移动组周技术分享
 
 ---
 
-微信-支付宝-银联支付对比 - 王胜
+## 微信-支付宝-银联支付对比 - 王胜
+
+### [微信支付](https://pay.weixin.qq.com)
+
+#### [业务流程](https://pay.weixin.qq.com/wiki/doc/api/app/app.php?chapter=8_3)
+
+![pay-weixin-timeline](https://pay.weixin.qq.com/wiki/doc/api/img/chapter8_3_1.png)
+
+### [支付宝](https://open.alipay.com)
+
+#### [业务流程](https://doc.open.alipay.com/doc2/detail.htm?spm=a219a.7629140.0.0.8NhMga&treeId=59&articleId=103658&docType=1)
+
+![pay-alipay-timeline](https://img.alicdn.com/top/i1/LB1n8NYKVXXXXbbXpXXXXXXXXXX)
+
+### [银联](https://open.unionpay.com)
+
+#### [业务流程](https://open.unionpay.com/ajweb/product/detail?id=3)
+
+![pay-unionpay-timeline](https://open.unionpay.com/upload/image/1416394316921062523.png)
+
+### 结论
+
+|支付平台|流程图|文档|接口设计|demo|测试相关|
+|:--|:--|:--|:--|:--|:--|
+|微信|&hearts;&hearts;&hearts;&hearts;&hearts;|&hearts;&hearts;&hearts;&hearts;&hearts;|&hearts;&hearts;&hearts;&hearts;&hearts;|&hearts;&hearts;&hearts;|&hearts;&hearts;&hearts;&hearts;|
+|支付宝|&hearts;&hearts;&hearts;&hearts;|&hearts;&hearts;&hearts;|&hearts;&hearts;&hearts;&hearts;|&hearts;&hearts;|&hearts;&hearts;|
+|银联|&hearts;&hearts;&hearts;|&hearts;&hearts;|&hearts;&hearts;|&hearts;&hearts;|&hearts;&hearts;&hearts;&hearts;|
+
+说明：
+
+- 路程图
+  
+  从全面性和完整性看，微信 > 支付宝 > 银联
+- 文档：
+  
+  微信更简洁，清晰，完整；其他两家还是相对传统的风格，尤其是银联
+- 接口设计：
+
+  微信的接口设计更简洁灵活易用，支付宝次之，银联的字段说明另类。
+- demo:
+
+  微信demo还算清楚，但是美中不足项目编码非utf-8，还得用Notepad++才正确编码显示；支付宝和银联的demo看起来晕。
+- 测试：
+
+  微信的测试环境是通过添加沙箱sandbox路径实现；另外，微信提供了测试用例，赞一个。支付宝没有看到有测试环境。银联在sdk的API参数中，提供了环境参数设置。
 
 
 
